* Enable weather effects for more above-ground locations.
* Fix some quest messages not being saved as already displayed.
* Reveal gas traps when you step on them.
* Fix several places where panic immunity or disease immunity was not respected.
* Fix several crafting bugs, hopefully preventing crashes.
* Fix Terra not offering priestly services after you killed Lobh-se.
* Spill more water over a burning player when they pray to Silva, so ther's
  a better chance to be extinguished.
* Prevent long strings in config options from overflowing when displayed.
* Prevent building features in owned rooms.
* Explosive liquids can no longer be used to douse flames.
* Wands of webbing were not causing hostility.
* Fix horns of fear causing panic without checking the panic level of the victim.
* Remove redundant messages from auto map notes.
* Let monsters also benefit from Detecting status effect.
* Fix sitting on fountains and drinking from non-water fountains.

Aslona:
* A new main quest will see you trying to bring peace back to the kingdom of
  Aslona, currently in the middle of a civil war.
* Add six new locations.
* Player can now have a ship to sail the oceans of worldmap. This also means
  that they can now bring pets that would normally be unable to cross the ocean
  with them.
* Moving over the ocean is slightly slower than on dry land.

Version 0.57, released 24th September 2019
------------------------------------------

Changes:
* Add Black Market, an end-game shop to spend all excess gold in.
* Add game lore and fiction to the Doc folder.
* Magic helmets spawn with random material.
* Switch some helmets from full helmet to normal.
* Keys very rarely break when used.

Fixes:
* Clean up code.
* New "expansive terrain" can help prevent blocking important entrances.
* Improve item search algorithm.
* Fix ring detection to work same as scrolls.
* Enable wishes for empty containers, make empty cans and empty bottles wishable.